Squashing bugs galore

--- a/www/css/moneyleash.css
+++ b/www/css/moneyleash.css
@@ -27,7 +27,6 @@
     width: 100px;
     height: 100px;
     background: #d9534f;
-    text-shadow: -1px -1px #000;
 }
 .logo span {
     font: 70px 'PT Sans', sans-serif;
